--- a/html/contacto.html
+++ b/html/contacto.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nosotros</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="/css/style.css">
 </head>
 
 <body>
@@ -13,16 +13,16 @@
         <div class="menu">
             <header>
                 <div class="logoHeader">
-                    <img class="logoFashionify" src="Multimedia/fashionify.png" alt="Logo fashionify">
+                    <img class="logoFashionify" src="/multimedia/fashionify.png" alt="Logo fashionify">
                 </div>
                 <nav>
                     <div class="menuItems">
                         <ul>
                             <li class="list item1">
-                                <a href="index.html">Inicio</a>
+                                <a href="/index.html">Inicio</a>
                             </li>
                             <li class="list item2">
-                                <a href="Inspiraciones.html">Inspiraciones</a>
+                                <a href="inspiraciones.html">Inspiraciones</a>
                             </li>
                             <li class="list item3">
                                 <a href="clientes.html">Clientes</a>
@@ -82,12 +82,12 @@
     <ul>
         <li>
             <a href="https://www.instagram.com/feedom.io/?hl=en" target="_blank">
-                <img src="Multimedia/instagram.png" alt="Instagram logo">
+                <img src="/multimedia/instagram.png" alt="Instagram logo">
             </a>
         </li>
         <li>
             <a href="https://www.tiktok.com/@florrgallicchio?_t=8e1AgapxRwr&_r=1" target="_blank">
-                <img src="Multimedia/tiktok.png" alt="Tiktok logo">
+                <img src="/multimedia/tiktok.png" alt="Tiktok logo">
             </a>
         </li>
     </ul>
