--- a/html/nosotros.html
+++ b/html/nosotros.html
@@ -13,7 +13,7 @@
         <div class="menu">
             <header>
                 <div class="logoHeader">
-                    <img class="logoFashionify" src="Multimedia/fashionify.png" alt="Logo fashionify">
+                    <img class="logoFashionify" src="multimedia/fashionify.png" alt="Logo fashionify">
                 </div>
                 <nav>
                     <div class="menuItems">
@@ -22,16 +22,16 @@
                                 <a href="index.html">Inicio</a>
                             </li>
                             <li class="list item2">
-                                <a href="Inspiraciones.html">Inspiraciones</a>
+                                <a href="html/inspiraciones.html">Inspiraciones</a>
                             </li>
                             <li class="list item3">
-                                <a href="clientes.html">Clientes</a>
+                                <a href="html/clientes.html">Clientes</a>
                             </li>
                             <li class="list item4">
-                                <a style="font-weight: 700" href="nosotros.html">Nosotros</a>
+                                <a style="font-weight: 700" href="html/nosotros.html">Nosotros</a>
                             </li>
                             <li class="list item5">
-                                <a href="contacto.html">Comenzar</a>
+                                <a href="html/contacto.html">Comenzar</a>
                             </li>
                         </ul>
                     </div>
@@ -49,7 +49,7 @@
 <footer>
     <h1>Empieza ahora</h1>
     <h5>Potencia tu negocio con AI</h5>
-    <a class="contactateButton" href="contacto.html">
+    <a class="contactateButton" href="html/contacto.html">
         <span>Contactate</span>
     </a>
 
@@ -67,12 +67,12 @@
     <ul>
         <li>
             <a href="https://www.instagram.com/feedom.io/?hl=en" target="_blank">
-                <img src="Multimedia/instagram.png" alt="Instagram logo">
+                <img src="multimedia/instagram.png" alt="Instagram logo">
             </a>
         </li>
         <li>
             <a href="https://www.tiktok.com/@florrgallicchio?_t=8e1AgapxRwr&_r=1" target="_blank">
-                <img src="Multimedia/tiktok.png" alt="Tiktok logo">
+                <img src="multimedia/tiktok.png" alt="Tiktok logo">
             </a>
         </li>
     </ul>
