--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="menu">
             <header>
                 <div class="logoHeader">
-                    <img class="logoFashionify" src="Multimedia/fashionify.png" alt="Logo fashionify">
+                    <img class="logoFashionify" src="multimedia/fashionify.png" alt="Logo fashionify">
                 </div>
                 <nav>
                     <div class="menuItems">
@@ -22,16 +22,16 @@
                                 <a style="font-weight: 700" href="index.html">Inicio</a>
                             </li>
                             <li class="list item2">
-                                <a href="Inspiraciones.html">Inspiraciones</a>
+                                <a href="html/inspiraciones.html">Inspiraciones</a>
                             </li>
                             <li class="list item3">
-                                <a href="clientes.html">Clientes</a>
+                                <a href="html/clientes.html">Clientes</a>
                             </li>
                             <li class="list item4">
-                                <a href="nosotros.html">Nosotros</a>
+                                <a href="html/nosotros.html">Nosotros</a>
                             </li>
                             <li class="list item5">
-                                <a href="contacto.html">Comenzar</a>
+                                <a href="html/contacto.html">Comenzar</a>
                             </li>
                         </ul>
                     </div>
@@ -41,10 +41,10 @@
 
         <h1>La prenda que estás buscando, al alcance de una imagen</h1>
         <h5>Potenciales clientes podrán encontrar las prendas de tu sitio con tan solo subir una imagen.</h5>
-        <a class="comenzarButton" href="contacto.html">
+        <a class="comenzarButton" href="html/contacto.html">
             <span>Comenzar</span>
         </a>
-        <img class="imagen-1" src="Multimedia/imagen-1.jpg" alt="Prendas colgadas de una percha">
+        <img class="imagen-1" src="multimedia/imagen-1.jpg" alt="Prendas colgadas de una percha">
 
 
         <h3>X%</h3>
@@ -65,7 +65,7 @@
             eligendi sit, ad dignissimos!</p>
 
 
-        <img class="imagen-2" src="Multimedia/imagen-2.jpg" alt="Mujer con bolsas mirando el teléfono">
+        <img class="imagen-2" src="multimedia/imagen-2.jpg" alt="Mujer con bolsas mirando el teléfono">
         <h3>Una imagen de distancia entre la prenda que buscan tus usuarios y vos</h3>
 
         <h5>Sube una imagen de tu galería que hayas visto en cualquier lado</h5>
@@ -77,14 +77,14 @@
         <h4>Confían en nosotros</h4>
 
         <div>
-            <img class="logosClientes" src="Multimedia/rapsodia.png" alt="Logo de rapsodia">
-            <img class="logosClientes" src="Multimedia/jackiesmith.png" alt="Logo de jackie smith">
-            <img class="logosClientes" src="Multimedia/jazminchebar.png" alt="Logo de jazmin chebar">
-            <img class="logosClientes" src="Multimedia/mariacher.png" alt="Logo de maria cher">
-            <img class="logosClientes" src="Multimedia/vitamina.jpg" alt="Logo de vitamina">
+            <img class="logosClientes" src="multimedia/rapsodia.png" alt="Logo de rapsodia">
+            <img class="logosClientes" src="multimedia/ultimedia/jackiesmith.png" alt="Logo de jackie smith">
+            <img class="logosClientes" src="multimedia/ultimedia/jazminchebar.png" alt="Logo de jazmin chebar">
+            <img class="logosClientes" src="multimedia/ultimedia/mariacher.png" alt="Logo de maria cher">
+            <img class="logosClientes" src="multimedia/ultimedia/vitamina.jpg" alt="Logo de vitamina">
         </div>
 
-        <img class="logosClientes" src="Multimedia/rapsodia.png" alt="Logo de rapsodia">
+        <img class="logosClientes" src="multimedia/rapsodia.png" alt="Logo de rapsodia">
         <h4>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Accusantium possimus laborum, temporibus eos
             quidem ea
             incidunt modi nulla odit facilis impedit rem amet, praesentium minus velit unde! Voluptates quos, doloribus
@@ -104,7 +104,7 @@
 <footer>
     <h1>Empieza ahora</h1>
     <h5>Potencia tu negocio con AI</h5>
-    <a class="contactateButton" href="contacto.html">
+    <a class="contactateButton" href="html/contacto.html">
         <span>Contactate</span>
     </a>
 
@@ -122,12 +122,12 @@
     <ul>
         <li>
             <a href="https://www.instagram.com/feedom.io/?hl=en" target="_blank">
-                <img src="Multimedia/instagram.png" alt="Instagram logo">
+                <img src="multimedia/instagram.png" alt="Instagram logo">
             </a>
         </li>
         <li>
             <a href="https://www.tiktok.com/@florrgallicchio?_t=8e1AgapxRwr&_r=1" target="_blank">
-                <img src="Multimedia/tiktok.png" alt="Tiktok logo">
+                <img src="multimedia/tiktok.png" alt="Tiktok logo">
             </a>
         </li>
     </ul>
