Primera versión bootstrap

--- a/html/nosotros.html
+++ b/html/nosotros.html
@@ -5,7 +5,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nosotros</title>
-    <link rel="stylesheet" href="css/style.css">
+    <!-- BS CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+    <!-- Mi CSS -->
+    <link rel="stylesheet" href="/css/style.css">
+    <link rel="shortcut icon" href="/multimedia/fashionify.png" type="image/x-icon">
 </head>
 
 <body>
@@ -13,25 +18,25 @@
         <div class="menu">
             <header>
                 <div class="logoHeader">
-                    <img class="logoFashionify" src="multimedia/fashionify.png" alt="Logo fashionify">
+                    <img class="logoFashionify" src="/multimedia/fashionify.png" alt="Logo fashionify">
                 </div>
                 <nav>
                     <div class="menuItems">
                         <ul>
                             <li class="list item1">
-                                <a href="index.html">Inicio</a>
+                                <a href="/index.html">Inicio</a>
                             </li>
                             <li class="list item2">
-                                <a href="html/inspiraciones.html">Inspiraciones</a>
+                                <a href="inspiraciones.html">Inspiraciones</a>
                             </li>
                             <li class="list item3">
-                                <a href="html/clientes.html">Clientes</a>
+                                <a href="clientes.html">Clientes</a>
                             </li>
                             <li class="list item4">
-                                <a style="font-weight: 700" href="html/nosotros.html">Nosotros</a>
+                                <a style="font-weight: 700" href="nosotros.html">Nosotros</a>
                             </li>
                             <li class="list item5">
-                                <a href="html/contacto.html">Comenzar</a>
+                                <a href="contacto.html">Comenzar</a>
                             </li>
                         </ul>
                     </div>
@@ -45,40 +50,42 @@
             ipsam
             aperiam illum ad!</h5>
     </div>
+    <footer>
+        <h1>Empieza ahora</h1>
+        <h5>Potencia tu negocio con AI</h5>
+        <a class="contactateButton" href="contacto.html">
+            <span>Contactate</span>
+        </a>
+
+        <h6>© 2023 Fashionify. Todos los derechos reservados.</h6>
+        <h6>Cookies</h6>
+        <h6>Privacidad</h6>
+        <h6>Términos</h6>
+
+        <h5>Contacto</h5>
+        <h5>Formulario</h5>
+        <h5>Clientes</h5>
+        <h5>Casos de éxito</h5>
+        <h5>Seguinos</h5>
+
+        <ul>
+            <li>
+                <a href="https://www.instagram.com/feedom.io/?hl=en" target="_blank">
+                    <img src="/multimedia/instagram.png" alt="Instagram logo">
+                </a>
+            </li>
+            <li>
+                <a href="https://www.tiktok.com/@florrgallicchio?_t=8e1AgapxRwr&_r=1" target="_blank">
+                    <img src="/multimedia/tiktok.png" alt="Tiktok logo">
+                </a>
+            </li>
+        </ul>
+
+    </footer>
+    <!-- BS JS -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
+        crossorigin="anonymous"></script>
 </body>
-<footer>
-    <h1>Empieza ahora</h1>
-    <h5>Potencia tu negocio con AI</h5>
-    <a class="contactateButton" href="html/contacto.html">
-        <span>Contactate</span>
-    </a>
-
-    <h6>© 2023 Fashionify. Todos los derechos reservados.</h6>
-    <h6>Cookies</h6>
-    <h6>Privacidad</h6>
-    <h6>Términos</h6>
-
-    <h5>Contacto</h5>
-    <h5>Formulario</h5>
-    <h5>Clientes</h5>
-    <h5>Casos de éxito</h5>
-    <h5>Seguinos</h5>
-
-    <ul>
-        <li>
-            <a href="https://www.instagram.com/feedom.io/?hl=en" target="_blank">
-                <img src="multimedia/instagram.png" alt="Instagram logo">
-            </a>
-        </li>
-        <li>
-            <a href="https://www.tiktok.com/@florrgallicchio?_t=8e1AgapxRwr&_r=1" target="_blank">
-                <img src="multimedia/tiktok.png" alt="Tiktok logo">
-            </a>
-        </li>
-    </ul>
-
-</footer>
-
-</html>
 
 </html>
