--- a/html/nosotros.html
+++ b/html/nosotros.html
@@ -9,8 +9,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
     <!-- Mi CSS -->
-    <link rel="stylesheet" href="/css/style.css">
-    <link rel="shortcut icon" href="/multimedia/fashionify.png" type="image/x-icon">
+    <link rel="stylesheet" href="../css/style.css">
+    <link rel="shortcut icon" href="../multimedia/fashionify.png" type="image/x-icon">
 </head>
 
 <body>
@@ -18,13 +18,13 @@
         <div class="menu">
             <header>
                 <div class="logoHeader">
-                    <img class="logoFashionify" src="/multimedia/fashionify.png" alt="Logo fashionify">
+                    <img class="logoFashionify" src="../multimedia/fashionify.png" alt="Logo fashionify">
                 </div>
                 <nav>
                     <div class="menuItems">
                         <ul>
                             <li class="list item1">
-                                <a href="/index.html">Inicio</a>
+                                <a href="../index.html">Inicio</a>
                             </li>
                             <li class="list item2">
                                 <a href="inspiraciones.html">Inspiraciones</a>
@@ -71,12 +71,12 @@
         <ul>
             <li>
                 <a href="https://www.instagram.com/feedom.io/?hl=en" target="_blank">
-                    <img src="/multimedia/instagram.png" alt="Instagram logo">
+                    <img src="../multimedia/instagram.png" alt="Instagram logo">
                 </a>
             </li>
             <li>
                 <a href="https://www.tiktok.com/@florrgallicchio?_t=8e1AgapxRwr&_r=1" target="_blank">
-                    <img src="/multimedia/tiktok.png" alt="Tiktok logo">
+                    <img src="../multimedia/tiktok.png" alt="Tiktok logo">
                 </a>
             </li>
         </ul>
